# CYTHON_TEST

./: .gitignore  .pdm.toml  MAINFEST.in  MANIFEST.in  Makefile  README.md  exam.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml
requirements/: cython.txt
src/example/: __init__.py  _example.pyi  _example.pyx
