[metadata]
name = example
version = 0.2.0
description = A test project using cython

[options]
python_requires = >=3.8
package_dir =
    =src
packages = example
zip_safe = False
include_package_data = True

[options.package_data]
* =
    *.pyi
    *.pyd


[options.exclude_package_data]
* =
    *.c
    *.cpp
    *.h
    *.hpp
